--- a/sim/CMakeLists.txt
+++ b/sim/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   visualization_msgs
+  key_teleop
 )
 
 ## System dependencies are found with CMake's conventions
@@ -162,6 +163,8 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
   scripts/interactive_server.py
+  scripts/map_parser.py
+  scripts/key_teleop.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
